--- a/tipkor/poly/templates/poly/leaflet.html
+++ b/tipkor/poly/templates/poly/leaflet.html
@@ -7,12 +7,15 @@
 <div class="container border">
     <h5 style="color: red;">Вывод информации из модели</h5>
 
-    <br>
-    leaflet
-    <div> {% for item in leaflet %}
-        <p>{{item }}</p>
-        {% endfor %}
-    </div>
+
+
+    <form class="form-control-lg " action="{% url 'poly:card' %}" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" class="yes_button btn btn-primary" value="Расчет"></input>
+
+    </form>
+
 </div>
 
 {% endblock %}
