--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -33,7 +33,7 @@
                 <div class="row border">
                     <div class="col border">{{ form.paper }}<p>Плотность бумаги</p>
                     </div>
-                    <div class="col border">{{ form.card_format }}<p>Размер визитки</p>
+                    <div class="col border">{{ form.format }}<p>Размер визитки</p>
                     </div>
                 </div>
 
