--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -64,7 +64,7 @@
 <div class="container">
     <div class="result_info">
         <div class="row border">
-            <h1 style="color: red;">Цена тиража: {{ result }}</h1>
+            <h1 style="color: red;">Расчет: {{ result }}</h1>
             <h4>Готовность - число, пояснения</h4>
         </div>
     </div>
