--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -31,16 +31,16 @@
             <form class="form-control-lg " action="{% url 'poly:card' %}" method="post">
                 {% csrf_token %}
                 <div class="row border">
-                    <div class="col border">{{ form.paper }}<p>Плотность бумаги</p>
+                    <div class="col border">{{ calc_form.paper }}<p>Плотность бумаги</p>
                     </div>
-                    <div class="col border">{{ form.format }}<p>Размер визитки</p>
+                    <div class="col border">{{ calc_form.format }}<p>Размер визитки</p>
                     </div>
                 </div>
 
                 <div class="row border pt-4">
-                    <div class="col border">{{ form.duplex }}<p>4+4/4+0:</p>
+                    <div class="col border">{{ calc_form.duplex }}<p>4+4/4+0:</p>
                     </div>
-                    <div class="col border">{{ form.pressrun }}<p>тираж(шт):</p>
+                    <div class="col border">{{ calc_form.pressrun }}<p>тираж(шт):</p>
                     </div>
                 </div>
 
@@ -85,7 +85,7 @@
 <div>
     <form class="form-control-lg " action="{% url 'poly:card' %}" method="post">
         {% csrf_token %}
-            {{ form2 }}
+            {{ confirm_form }}
                 <input type="submit" class="yes_button btn btn-primary" value="form2"></input>
                 <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
             </div>
