--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -46,7 +46,7 @@
 
                 <div class="row">
                     <div class="col border">
-                        <input type="submit" class="yes_button btn btn-primary" value="Расчет"></input>
+                        <button type="submit" class="yes_button btn btn-primary" name="calc_form">Расчет</button>
                         <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
                     </div>
                 </div>
@@ -86,7 +86,7 @@
     <form class="form-control-lg " action="{% url 'poly:card' %}" method="post">
         {% csrf_token %}
             {{ confirm_form }}
-                <input type="submit" class="yes_button btn btn-primary" value="form2"></input>
+                <button type="submit" class="yes_button btn btn-primary" name="confirm_form">Отправить заказ</button>
                 <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
             </div>
         </div>
