--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -64,7 +64,10 @@
 <div class="container">
     <div class="result_info">
         <div class="row border">
-            <h1 style="color: red;">Расчет: {{ result }}</h1>
+            <h1 style="color: red;">Расчет: {{ result.id }}</h1>
+            <div>
+                <a class="btn btn-success" href="confirm/{{ result.id }}/"> заказать </a>
+            </div>
             <h4>Готовность - число, пояснения</h4>
         </div>
     </div>
@@ -82,15 +85,8 @@
 
 </form>
 
-<div>
-    <form class="form-control-lg " action="{% url 'poly:card' %}" method="post">
-        {% csrf_token %}
-            {{ confirm_form }}
-                <button type="submit" class="yes_button btn btn-primary" name="confirm_form">Отправить заказ</button>
-                <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
-            </div>
-        </div>
-    </form>
+
+</form>
 
 </div>
 
