--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -65,6 +65,7 @@
     <div class="result_info">
         <div class="row border">
             <h1 style="color: red;">Расчет: {{ result }}</h1>
+            <h3 style="color: rgb(76, 0, 255);">Готовность: {{ ready_date }}</h3>
             <div>
                 <a class="btn btn-success" href="confirm/{{ result.id }}/"> заказать </a>
             </div>
