--- a/tipkor/poly/static/poly/css/card.css
+++ b/tipkor/poly/static/poly/css/card.css
@@ -2,22 +2,23 @@
     background-color: rgb(97, 213, 255);
 }
 
-#id_paper, #id_format, #id_duplex, #id_pressrun  {
+#id_paper, #id_format_p, #id_duplex, #id_pressrun  {
     height: 40px;
-    width: 150px;
+    width: 200px;
 }
 
-.yes_button {
+.calc_button {
     height: 30px;
     width: 150px;
 }
 
-.reset_button {
+
+
+.confirm_button {
     height: 30px;
-    width: 50px;
-    /* padding-top: 5px;
-    padding-left: 7px; */
+    width: 150px;
 }
+
 
 
 /* md срабатывает меньше 992 */
@@ -36,7 +37,7 @@
 /* xs срабатывает меньше 576px */
 @media screen and (max-width: 576px) {
 
-    .yes_button {
+    .calc_button {
         height: 30px;
         width: 150px;
     }
