--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -8,88 +8,96 @@
     <link rel="stylesheet" type="text/css" href="{% static 'poly/css/card.css' %}">
 </head>
 <br>
-<br>
-<br>
+
 
 
 <div class="container">
     <div class="card_text">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat voluptatem commodi dicta, fuga repellat
-            minus
-            mollitia eveniet perferendis, incidunt alias quod a tempore quis magni numquam laboriosam, illo provident
-            tempora!</p>
+        <p>-----------------</p>
     </div>
     <h1>Визитки</h1>
 </div>
 
-
 <!-- Форма -->
 <div class="container">
-    <div class="card_form row ">
-        <div class="col-xl-5 col-lg-7 col-md-8 col-sm-6">
-            <form class="form-control-lg " action="{% url 'poly:card' %}" method="post">
-                {% csrf_token %}
-                <div class="row border">
-                    <div class="col border">{{ calc_form.paper }}<p>Плотность бумаги</p>
-                    </div>
-                    <div class="col border">{{ calc_form.format_p }}<p>Размер визитки</p>
-                    </div>
-                </div>
+    <div class="card_form border shadow p-3">
+        <div class="row">
 
-                <div class="row border pt-4">
-                    <div class="col border">{{ calc_form.duplex }}<p>4+4/4+0:</p>
+            <div class="col-xl-5 col-lg-7 col-md-8 col-sm-6">
+                <form class="form-control-lg " action="{% url 'poly:card' %}" method="post">
+                    {% csrf_token %}
+                    <div class="row">
+                        <div class="col">{{ calc_form.paper }}<p>Плотность бумаги</p>
+                        </div>
+                        <div class="col">{{ calc_form.format_p }}<p>Размер визитки</p>
+                        </div>
                     </div>
-                    <div class="col border">{{ calc_form.pressrun }}<p>тираж(шт):</p>
-                    </div>
-                </div>
 
-                <div class="row">
-                    <div class="col border">
-                        <button type="submit" class="yes_button btn btn-primary" name="calc_form">Расчет</button>
-                        <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
+                    <div class="row pt-4">
+                        <div class="col">{{ calc_form.duplex }}<p>4+4/4+0:</p>
+                        </div>
+                        <div class="col">{{ calc_form.pressrun }}<p>тираж(шт):</p>
+                        </div>
                     </div>
-                </div>
-            </form>
+
+                    <div class="row">
+                        <div class="col">
+                            <button type="submit" class="calc_button btn btn-primary" name="calc_form">Расчет</button>
+                            <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <div class="card_img col">
+                картинка визитки
+            </div>
         </div>
-
-        <div class="card_img col border">
-            картинка визитки
-        </div>
+        <!-- Результат -->
     </div>
-    <!-- Результат -->
 </div>
 
 <br><br>
 <div class="container">
-    <div class="result_info">
-        <div class="row border">
-            <h1 style="color: red;">Расчет: {{ result }}</h1>
-            <h3 style="color: rgb(76, 0, 255);">Готовность: {{ ready_date }}</h3>
-            <div>
-                <a class="btn btn-success" href="confirm/{{ result.id }}/"> заказать </a>
+    <div class="result_info p-3 border shadow">
+        <div class="row">
+            <div class="col">
+                <h2 style="color: rgb(145, 1, 30);">Стоимость: {{ result.cost|default:"Сделайте расчет" }} руб.</h2>
+                <h5 style="color: rgb(93, 3, 131);">Формат: {{ result.format_p }}</h5>
+                <h5 style="color: rgb(93, 3, 131);">Материал: {{ result.paper }} г/м</h5>
+                <h5 style="color: rgb(93, 3, 131);">Двухсторонняя печать: {{ result.duplex|yesno:"Да,Нет" }}</h5>
+                <h5 style="color: rgb(93, 3, 131);">Тираж: {{ result.pressrun }} штук.</h5>
             </div>
-            <h4>Готовность - число, пояснения</h4>
+            <div class="col">
+                <h2 style="color: rgb(1, 58, 124);">Готовность: {{ ready_date|date:"d.m.Y" }}г.</h2>
+                <p>При заказе сегодня до 15:00</p>
+            </div>
+
+            <div class="pt-4">
+                <a class="confirm_button btn btn-success" href="confirm/{{ result.id }}/"> заказать </a>
+            </div>
+            <div class="more_info">
+                <h5>Нажмите "заказать", что бы отправить нам заказ.</h5>
+            </div>
         </div>
     </div>
-    <br>
-    <div class="row border">
-        <div class="more_info">
-            <h4>Макет для скачивания, про дизайн</h4>
+</div>
+
+<div class="container">
+    <div class="bottom_text pt-4"></div>
+    <div class="row">
+        <div class="col">
+            <h5>Визитки</h5>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat voluptatem commodi dicta, fuga repellat
+                minus
+                mollitia eveniet perferendis, incidunt alias quod a tempore quis magni numquam laboriosam, illo
+                provident
+                tempora!</p>
         </div>
     </div>
 </div>
 
-<div>
-
-</div>
-
-</form>
-
-
-</form>
-
-</div>
 
 <br><br>
 
