--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -69,7 +69,7 @@
                 <h5 style="color: rgb(93, 3, 131);">Тираж: {{ result.pressrun }} штук.</h5>
             </div>
             <div class="col">
-                <h2 style="color: rgb(1, 58, 124);">Готовность: {{ ready_date|date:"d.m.Y" }}г.</h2>
+                <h2 style="color: rgb(1, 58, 124);">Готовность: {{ ready_date|date:"d.m.Y" }}</h2>
                 <p>При заказе сегодня до 15:00</p>
             </div>
 
