--- a/tipkor/poly/templates/poly/success.html
+++ b/tipkor/poly/templates/poly/success.html
@@ -1,2 +1,47 @@
-success success success success
-{{ order }}
+{% extends 'base.html' %}
+{% load static %}
+
+
+{% block content %}
+
+<head>
+    <link rel="stylesheet" type="text/css" href="{% static 'poly/css/card.css' %}">
+</head>
+<br>
+<br>
+<br>
+
+
+<div class="container">
+    <div class="confirm_order border shadow p-3">
+        <div class="row">
+
+        <h1>Заказ размещен № {{ order.id }} от {{ order.create_date }}</h1>
+        <div>
+            <div class="col">
+                <h2 style="color: rgb(145, 1, 30);">Стоимость: {{ order.product.cost|default:"Сделайте расчет" }} руб.</h2>
+                <h5 style="color: rgb(93, 3, 131);">Формат: {{ order.product.format_p }}</h5>
+                <h5 style="color: rgb(93, 3, 131);">Материал: {{ order.product.paper }} г/м</h5>
+                <h5 style="color: rgb(93, 3, 131);">Двухсторонняя печать: {{ order.product.duplex|yesno:"Да,Нет" }}</h5>
+                <h5 style="color: rgb(93, 3, 131);">Тираж: {{ order.product.pressrun }} штук.</h5>
+            </div>
+            <div class="col">
+                <h2 style="color: rgb(1, 58, 124);">Готовность: {{ order.ready_date|date:"d.m.Y" }}г.</h2>
+                <p>По готовности сообщим по e-mail и номеру телефона</p>
+            </div>
+        </div>
+       
+    </div>
+
+    <a href="/" type="button">На главную</a>
+
+
+
+
+</div>
+
+<br><br>
+
+
+
+{% endblock %}
