--- a/tipkor/poly/templates/poly/confirm.html
+++ b/tipkor/poly/templates/poly/confirm.html
@@ -36,7 +36,7 @@
                 {% csrf_token %}
                 <div class="row border">
                     <div class="col border">{{ form.name }}<p>Имя</p>
-                    </div>
+                    </div>tipkor@mail.ru
                     <div class="col border">{{ form.email }}<p>почта</p>
                     </div>
                     <div class="col border">{{ form.tel }}<p>телефон</p>
