--- a/tipkor/tipkor/templates/tipkor/tipkor.html
+++ b/tipkor/tipkor/templates/tipkor/tipkor.html
@@ -6,17 +6,18 @@
 <!-- Картинка -->
 <div class="hi_imgage container p-3">
     <div class="row">
-        <img class="col" id="header_img" src="" alt="">
+        <img class="col" id="header_img" src="{% static '/tipkor/img/header_img.png' %}" alt="">
     </div>
 </div>
 
 <!-- Описание главная -->
 <div class="container p-3">
-    <div class="row border">
+    <div class="row">
         <h1 id="slogan">Офсетная печать, широкоформатка, печати штампы</h1>
     </div>
     <div>
-        <p style="font-size: 18px; text-align: center; margin-top: 20px;">Lorem ipsum dolor, sit amet consectetur
+        <p style="font-size: 18px; text-align: center; margin-top: 20px;">
+            Lorem ipsum dolor, sit amet consectetur
             adipisicing elit. Reiciendis magnam eveniet culpa eum
             reprehenderit velit, cupiditate corrupti voluptatum, aliquam quibusdam aspernatur maiores quae adipisci
             est? Eaque quis delectus porro sunt.</p>
@@ -24,17 +25,15 @@
 </div>
 
 <!-- Полиграфия -->
-<div class="container p-2">
-    <div class="row border">
+<div class="container border shadow">
+    <div class="row pt-2">
         <h2 id="titles">Полиграфия</h2>
         <a name="poly"></a>
     </div>
-</div>
-<div class="container">
     <div class="row row-cols-1 row-cols-md-3">
         <!-- карточка вида заказа -->
         <div class="p-3">
-            <div class="card p-2 border">
+            <div class="card p-2 border shadow-sm">
                 <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Визитки</h3>
@@ -45,7 +44,7 @@
         </div>
 
         <div class="p-3">
-            <div class="card p-2 border">
+            <div class="card p-2 border shadow-sm">
                 <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Листовки</h3>
@@ -56,7 +55,7 @@
         </div>
 
         <div class="p-3">
-            <div class="card p-2 border">
+            <div class="card p-2 border shadow-sm">
                 <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Буклеты</h3>
@@ -70,17 +69,16 @@
 <br><br>
 
 <!-- Широкоформатка -->
-<div class="container p-2">
-    <div class="row border">
+
+<div class="container border shadow">
+    <div class="row pt-2">
         <h2 id="titles">Широкоформатка</h2>
         <a name="poly"></a>
     </div>
-</div>
-<div class="container">
     <div class="row row-cols-1 row-cols-md-3">
         <!-- карточка вида заказа -->
         <div class="p-3">
-            <div class="card p-2 border">
+            <div class="card p-2 border shadow-sm">
                 <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Баннеры</h3>
@@ -91,7 +89,7 @@
         </div>
 
         <div class="p-3">
-            <div class="card p-2 border">
+            <div class="card p-2 border shadow-sm">
                 <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Наклейеки</h3>
@@ -102,7 +100,7 @@
         </div>
 
         <div class="p-3">
-            <div class="card p-2 border">
+            <div class="card p-2 border shadow-sm">
                 <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Таблички</h3>
@@ -115,17 +113,15 @@
 </div>
 
 <!-- Печати -->
-<div class="container p-2">
-    <div class="row border">
+<div class="container border shadow">
+    <div class="row pt-2">
         <h2 id="titles">Печати</h2>
         <a name="poly"></a>
     </div>
-</div>
-<div class="container">
     <div class="row row-cols-1 row-cols-md-3">
         <!-- карточка вида заказа -->
         <div class="p-3">
-            <div class="card p-2 border">
+            <div class="card p-2 border shadow-sm">
                 <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Печати ИП ООО</h3>
@@ -136,7 +132,7 @@
         </div>
 
         <div class="p-3">
-            <div class="card p-2 border">
+            <div class="card p-2 border shadow-sm">
                 <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Штампы</h3>
@@ -147,7 +143,7 @@
         </div>
 
         <div class="p-3">
-            <div class="card p-2 border">
+            <div class="card p-2 border shadow-sm">
                 <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Другое</h3>
