--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -18,28 +18,35 @@
 
 <body>
 	<!-- Верхняя строка -->
-	<div class="container pt-2">
-		<div class="top_line row d-flex justify-content-center align-items-center">
-			<div class="col d-flex justify-content-center border">
-				<img class="main_logo" src="{% static '/tipkor/img/logo.svg' %}" alt="">
+	<div class="container pt-4">
+		<div class="top_line row d-flex justify-content-center align-items-center shadow border rounded  p-3">
+			<div class="col d-flex justify-content-center ">
+				<a href="/">
+					<img class="main_logo" src="{% static '/tipkor/img/logo.svg' %}" alt="">
+				</a>
 			</div>
-			<div class="hi_telefon col border ">
+			<div class="hi_telefon col  ">
 				<p class="fs-3 mb-0"><strong>8 (964) 571-65-51</strong></p>
 			</div>
-			<div class="hi_grafic col border" style="text-align: center;">
+			<div class="hi_grafic col " style="text-align: center;">
 				<p class="fs-4  mb-0">пн-пт 10:00-18:00</p>
 
 			</div>
-			<div class="hi_watssap col-md-2 border">
+			<div class="hi_watssap col-md-2 ">
 				<div class="img_mess">
-					<img id="hi_mess" src="" alt="">
-					<a style="font-size: large;">whatssap</a>
+					<a href="https://wa.me/79645716551?text=" target="_blank">
+						<img id="hi_mess" src="{% static '/tipkor/img/whatsap.svg' %}" alt="">
+						<a href="https://wa.me/79645716551?text=" target="_blank"
+							style="font-weight: 800; font-size: large; padding-left: 5px">Whatssap</a>
+					</a>
 				</div>
 			</div>
-			<div class="hi_teleg col-md-2 border">
+			<div class="hi_teleg col-md-2 ">
 				<div class="img_mess">
-					<img id="hi_mess" src="" alt="">
-					<a style="font-size: large;">telegram</a>
+					<a href="https://t.me/+79645716551" target="_blank">
+						<img id="hi_mess" src="{% static '/tipkor/img/telegram.svg' %}" alt="">
+						<a href="https://t.me/+79645716551" target="_blank"
+							style="font-weight: 800; font-size: large; padding-left: 5px">Telegram</a>
 				</div>
 			</div>
 		</div>
@@ -51,8 +58,8 @@
 
 
 	<!-- Навигация -->
-	<div class="container pt-2">
-		<div class="top_buttons d-flex justify-content-center border">
+	<div class="container pt-4">
+		<div class="top_buttons d-flex justify-content-center">
 
 			<!-- Топ кнопки с выпадающим меню -->
 			<div class="dropdown d-flex flex-fill">
@@ -113,19 +120,26 @@
 						<use xlink:href="#bootstrap" />
 					</svg>
 				</a>
-				<span class="mb-3 mb-md-0 text-body-secondary">&copy; 2023 Company, Inc</span>
+				<span class="mb-3 mb-md-0 text-body-secondary">&copy; 2023 tipkor.ru</span>
 			</div>
 
 			<ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
 
-				<li class="ms-3"><a class="text-body-secondary" href="http://ya.ru">
-						<img id="hi_mess" src="" alt=""></a></li>
+				<li class="ms-3">
+					<a href="https://wa.me/79645716551?text=" target="_blank">
+						<img id="hi_mess" src="{% static '/tipkor/img/whatsap.svg' %}" alt=""></a>
+				</li>
 
-				<li class="ms-3"><a class="text-body-secondary" href="http://ya.ru">
-						<img id="hi_mess" src="" alt=""></a></li>
+				<li class="ms-3">
+					<a href="https://t.me/+79645716551" target="_blank">
+						<img id="hi_mess" src="{% static '/tipkor/img/telegram.svg' %}" alt=""></a>
 
-				<li class="ms-3"><a class="text-body-secondary" href="http://ya.ru">
-						<img id="hi_mess" src="" alt=""></a></li>
+				</li>
+
+				<li class="ms-3">
+					<a href="mailto:tipkor@mail.ru" target="_blank">
+					<img id="hi_mess" src="{% static '/tipkor/img/email.svg' %}" alt=""></a>
+				</li>
 
 			</ul>
 		</footer>
