--- a/tipkor/tipkor/templates/tipkor/tipkor.html
+++ b/tipkor/tipkor/templates/tipkor/tipkor.html
@@ -34,7 +34,7 @@
         <!-- карточка вида заказа -->
         <div class="p-3">
             <div class="card p-2 border shadow-sm">
-                <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
+                <img src="{% static '/tipkor/img/card.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Визитки</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
@@ -45,7 +45,7 @@
 
         <div class="p-3">
             <div class="card p-2 border shadow-sm">
-                <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
+                <img src="{% static '/tipkor/img/leaflet.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Листовки</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
@@ -56,7 +56,7 @@
 
         <div class="p-3">
             <div class="card p-2 border shadow-sm">
-                <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
+                <img src="{% static '/tipkor/img/booklet.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Буклеты</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
@@ -79,7 +79,7 @@
         <!-- карточка вида заказа -->
         <div class="p-3">
             <div class="card p-2 border shadow-sm">
-                <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
+                <img src="{% static '/tipkor/img/banner.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Баннеры</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
@@ -90,7 +90,7 @@
 
         <div class="p-3">
             <div class="card p-2 border shadow-sm">
-                <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
+                <img src="{% static '/tipkor/img/sticker.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Наклейеки</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
@@ -101,7 +101,7 @@
 
         <div class="p-3">
             <div class="card p-2 border shadow-sm">
-                <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
+                <img src="{% static '/tipkor/img/tablets.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Таблички</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
@@ -122,7 +122,7 @@
         <!-- карточка вида заказа -->
         <div class="p-3">
             <div class="card p-2 border shadow-sm">
-                <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
+                <img src="{% static '/tipkor/img/circle_stamp.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Печати ИП ООО</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
@@ -133,7 +133,7 @@
 
         <div class="p-3">
             <div class="card p-2 border shadow-sm">
-                <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
+                <img src="{% static '/tipkor/img/stamp.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Штампы</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
@@ -144,7 +144,7 @@
 
         <div class="p-3">
             <div class="card p-2 border shadow-sm">
-                <img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
+                <img src="{% static '/tipkor/img/other_stamp.gif' %}" class="icard-img-top img-fluid" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Другое</h3>
                     <p class="card-text">По кнопке якорь на прайс ниже.</p>
